src/main/resources/amr.peg
grammar AMR
x 			<-  "(" os var s "/" s aconcept (s desc)* os ")" %make_ancestor
y 			<- 	x / anamedconst / avar / astr / anum
desc 		<- 	rel alignment? s y %make_descendent
rel 		<-	":" [A-Za-z] [A-Za-z0-9-]*  
avar 		<- 	var alignment? %make_var
var 		<-	[a-z]+ [0-9]* 
anamedconst <- 	namedconst alignment? %make_constant
namedconst	<-	[a-z] [a-z]+ [ \t\n\r] / [+-] ![0-9] 
astr 		<- 	str alignment? %make_str
str			<-	"\"" ([^\"\s] [^\"\n\r]* [^\"\s]?)? "\""
anum 		<- 	num alignment? %make_num
num 		<- 	[+-]? [0-9]+ ("\." [0-9]+)? 
aconcept 	<- 	concept alignment? %make_concept
concept		<-	[A-Za-z0-9.'] [A-Za-z0-9.'-]* 
alignment <- "~" [A-Za-z0-9.,]+ %make_alignment
s <- [ \t]* [\n\r] [ \t]* / [ \t]+
os <- [ \t]* [\n\r]? [ \t]*
